--- a/daisy.html
+++ b/daisy.html
@@ -169,7 +169,7 @@
                 }
             };
             
-            const apiKey = ""; // Leave this empty, it will be handled by the environment
+            const apiKey = "AIzaSyD6YcI54wuYiQDPUUU63HeGjjazUHtDr9M"; 
             const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
             // Implemented exponential backoff for retries
